--- a/home.html
+++ b/home.html
@@ -126,6 +126,21 @@
       </div>
     </section>
     <hr>
+    <div class="text-center items-center temp">
+    <div class="made-by text text-1xl text-black-10">Made by</div>
+  <div class="author text-2xl">Prajwal</div>
+  <div class="text-2xl"><span id="element"></span></div></div>
+      <hr>
+  <script src="script.js"></script>
+  <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+  <!-- Setup and start animation! -->
+  <script>
+    var typed = new Typed('#element', {
+      strings: ['Graphic Designer', 'UI/UX Designer','Front-end Developer'],
+      typeSpeed: 50,
+      loop:true,
+    });
+  </script>
     <!-- footer -->
     <footer class="text-gray-600 body-font">
       <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
